[tool.poetry]
name = "rpi-yellow"
version = "0.1.0"
description = "Toy HTTP API switching Raspberry PI GPIO Pin"
authors = ["mgetka <michal.getka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.118.0"
aiosqlite = "^0.21.0"
uvicorn = "^0.37.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
